tests/integration/snapshots/integration__conformance__y_structure_lonely_string.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
"asd"
stderr ---
