tests/integration/snapshots/integration__conformance__y_structure_string_empty.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
""
stdout --- 
""
stderr --- 
<empty>
