tests/integration/snapshots/integration__conformance__y_structure_trailing_newline.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
["a"]

stdout ---
["a"]

stderr ---
